apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toogle-master-ingress
  namespace: toogle-master
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /flags/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
          - path: /rules/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
          - path: /evaluate/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
          - path: /analytics/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
